tests/cases/compiler-development/artifact/errors/diagnostic-cyclic-module.ari
mod diagnostic_cycle_a;

fn main() -> i64 {
  return 0;
}
